--- a/OneDo/View/MainPage.xaml
+++ b/OneDo/View/MainPage.xaml
@@ -1,4 +1,4 @@
-﻿<v:ExtendedPage x:Class="OneDo.View.Pages.MainPage"
+﻿<v:ExtendedPage x:Class="OneDo.View.MainPage"
                 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -119,7 +119,7 @@
                             </v:ModalTemplateSelector.TodoEditorTemplate>
                             <v:ModalTemplateSelector.FolderEditorTemplate>
                                 <DataTemplate x:DataType="vmModals:FolderEditorViewModel">
-                                    <vModals:FolderEditor Width="288" VerticalAlignment="Top" />
+                                    <vModals:FolderEditor HorizontalAlignment="Center" VerticalAlignment="Top" />
                                 </DataTemplate>
                             </v:ModalTemplateSelector.FolderEditorTemplate>
                             <v:ModalTemplateSelector.SettingsTemplate>
