--- a/OneDo/View/SplashScreenPage.xaml
+++ b/OneDo/View/SplashScreenPage.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="OneDo.View.Pages.SplashScreenPage"
+﻿<Page x:Class="OneDo.View.SplashScreenPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
