--- a/OneDo/View/Controls/FolderListControl.xaml
+++ b/OneDo/View/Controls/FolderListControl.xaml
@@ -209,10 +209,9 @@
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="Auto" />
                             <ColumnDefinition Width="Auto" />
-                            <ColumnDefinition Width="Auto" />
                             <ColumnDefinition />
                         </Grid.ColumnDefinitions>
-                        <Button Grid.Row="1"
+                        <!--<Button Grid.Row="1"
                                 Grid.Column="0"
                                 Style="{StaticResource FolderListButtonStyle}"
                                 Visibility="{Binding SelectedItem.HasParent, Converter={StaticResource BoolToVisibilityConverter}}">
@@ -229,9 +228,9 @@
                                     <ic:ChangePropertyAction PropertyName="BorderBrush" Value="Transparent" />
                                 </ic:EventTriggerBehavior>
                             </i:Interaction.Behaviors>
-                        </Button>
+                        </Button>-->
                         <ItemsPresenter Grid.Row="1"
-                                        Grid.Column="1"
+                                        Grid.Column="0"
                                         Padding="{TemplateBinding Padding}"
                                         Footer="{TemplateBinding Footer}"
                                         FooterTemplate="{TemplateBinding FooterTemplate}"
@@ -240,7 +239,7 @@
                                         HeaderTemplate="{TemplateBinding HeaderTemplate}"
                                         HeaderTransitions="{TemplateBinding HeaderTransitions}" />
                         <Button Grid.Row="1"
-                                Grid.Column="2"
+                                Grid.Column="1"
                                 Style="{StaticResource FolderListButtonStyle}"
                                 Tapped="AddItem_Tapped">
                             <FontIcon FontSize="16"
@@ -352,9 +351,9 @@
             <Setter Property="ScrollViewer.ZoomMode" Value="Disabled" />
             <Setter Property="ScrollViewer.IsDeferredScrollingEnabled" Value="False" />
             <Setter Property="ScrollViewer.BringIntoViewOnFocusChange" Value="True" />
-            <Setter Property="CanReorderItems" Value="True" />
-            <Setter Property="ReorderMode" Value="Enabled" />
-            <Setter Property="AllowDrop" Value="True" />
+            <!--<Setter Property="CanReorderItems" Value="True" />-->
+            <!--<Setter Property="ReorderMode" Value="Enabled" />-->
+            <!--<Setter Property="AllowDrop" Value="True" />-->
             <Setter Property="ItemContainerTransitions">
                 <Setter.Value>
                     <TransitionCollection>
