--- a/OneDo/View/Controls/ModalContainer.xaml
+++ b/OneDo/View/Controls/ModalContainer.xaml
@@ -19,28 +19,21 @@
 
     <Grid Grid.RowSpan="3">
         <Grid>
-            <Border x:Name="RootBorder"
-                    Opacity="0"
-                    Visibility="Collapsed">
+            <Border x:Name="BackgroundBorder" Visibility="Collapsed">
                 <Border.Background>
                     <SolidColorBrush Color="{ThemeResource SystemChromeBlackMediumLowColor}" />
                 </Border.Background>
                 <i:Interaction.Behaviors>
-                    <ic:EventTriggerBehavior EventName="Tapped">
-                        <ic:InvokeCommandAction Command="{x:Bind VM.CloseCurrentCommand}" />
-                    </ic:EventTriggerBehavior>
                     <ic:DataTriggerBehavior Binding="{x:Bind VM.Items.Count, Mode=OneWay}"
                                             ComparisonCondition="Equal"
                                             Value="0">
                         <im:ControlStoryboardAction>
                             <im:ControlStoryboardAction.Storyboard>
                                 <Storyboard>
-                                    <DoubleAnimation BeginTime="0:0:0.3"
-                                                     Duration="0:0:0.3"
-                                                     Storyboard.TargetName="RootBorder"
-                                                     Storyboard.TargetProperty="Opacity"
-                                                     To="0" />
-                                    <ObjectAnimationUsingKeyFrames Storyboard.TargetName="RootBorder" Storyboard.TargetProperty="Visibility">
+                                    <FadeOutThemeAnimation BeginTime="0:0:0.4"
+                                                           Duration="0:0:0.2"
+                                                           Storyboard.TargetName="BackgroundBorder" />
+                                    <ObjectAnimationUsingKeyFrames Storyboard.TargetName="BackgroundBorder" Storyboard.TargetProperty="Visibility">
                                         <DiscreteObjectKeyFrame KeyTime="0:0:0.6" Value="Collapsed" />
                                     </ObjectAnimationUsingKeyFrames>
                                 </Storyboard>
@@ -53,13 +46,10 @@
                         <im:ControlStoryboardAction>
                             <im:ControlStoryboardAction.Storyboard>
                                 <Storyboard>
-                                    <ObjectAnimationUsingKeyFrames Storyboard.TargetName="RootBorder" Storyboard.TargetProperty="Visibility">
+                                    <FadeInThemeAnimation Duration="0:0:0.2" Storyboard.TargetName="BackgroundBorder" />
+                                    <ObjectAnimationUsingKeyFrames Storyboard.TargetName="BackgroundBorder" Storyboard.TargetProperty="Visibility">
                                         <DiscreteObjectKeyFrame KeyTime="0" Value="Visible" />
                                     </ObjectAnimationUsingKeyFrames>
-                                    <DoubleAnimation Duration="0:0:0.3"
-                                                     Storyboard.TargetName="RootBorder"
-                                                     Storyboard.TargetProperty="Opacity"
-                                                     To="1" />
                                 </Storyboard>
                             </im:ControlStoryboardAction.Storyboard>
                         </im:ControlStoryboardAction>
@@ -72,7 +62,9 @@
                 <ItemsControl.ItemContainerTransitions>
                     <TransitionCollection>
                         <AddDeleteThemeTransition />
-                        <!--<EntranceThemeTransition IsStaggeringEnabled="True" />-->
+                        <!--<ContentThemeTransition />-->
+                        <!--<PopupThemeTransition />-->
+                        <!--<EntranceThemeTransition />-->
                     </TransitionCollection>
                 </ItemsControl.ItemContainerTransitions>
                 <ItemsControl.ItemsPanel>
@@ -84,9 +76,7 @@
                     <v:ModalTemplateSelector>
                         <v:ModalTemplateSelector.FolderEditorTemplate>
                             <DataTemplate x:DataType="vmModals:FolderEditorViewModel">
-                                <vModals:FolderEditor x:Name="Root"
-                                                      HorizontalAlignment="Center"
-                                                      VerticalAlignment="Top" />
+                                <vModals:FolderEditor HorizontalAlignment="Center" VerticalAlignment="Center" />
                             </DataTemplate>
                         </v:ModalTemplateSelector.FolderEditorTemplate>
                         <v:ModalTemplateSelector.NoteEditorTemplate>
